plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.practice'
version = '0.0.1-SNAPSHOT'
description = 'KafkaTestPractice'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
    allureCli {
        canBeResolved = true
        canBeConsumed = false
    }
}

repositories {
    mavenCentral()
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-kafka'

    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-kafka-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-kafka'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.fasterxml.jackson.core:jackson-annotations:3.0-rc5'
    testAnnotationProcessor 'com.fasterxml.jackson.core:jackson-annotations:3.0-rc5'
    testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.21.1'
    testImplementation 'org.apache.commons:commons-csv:1.14.1'
    testImplementation 'io.qameta.allure:allure-junit5:2.33.0'
    allureCli 'io.qameta.allure:allure-commandline:2.33.0'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}

tasks.register('allureServe', JavaExec) {
    classpath = configurations.allureCli
    mainClass = 'io.qameta.allure.CommandLine'
    args = ['serve', 'allure-results']
    dependsOn test
}
